Added customized index.html with own styles -- HW4 pt2

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Project name</a>
+                    <a class="brand" href="#">Extend Sangamon Valley Trail</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -144,7 +144,7 @@
   </div> 
   <div class="row-fluid subheading">
     <div class="span12">
-      <p class="lead">One sentence description.</p>
+      <p class="lead">The goal is to extend the great Sangamon Valley Trail to allow for further exploration and enjoyment.</p>
     </div>
   </div>
   <div class="row-fluid pitch">
@@ -193,21 +193,12 @@
 
   <div class="row-fluid section1">
     <div class="span5 offset1 asset">
-      <img class="img-polaroid" src="http://placehold.it/480x300">
+      <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+      <img class="img-polaroid" style="width: 480px; height: 300px;" src="https://www.dropbox.com/s/bsnkngxjqy6qqo1/bridge.jpeg">
     </div>
     <div class="span5 copy">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-        porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-        mollis justo velit at nunc. Fusce nec egestas sem. Donec
-        fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-        volutpat lorem ut congue malesuada. In facilisis scelerisque
-        turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-        quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-        risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-        rutrum, nunc leo tempus nisl, eu mollis justo velit at
-        nunc. Fusce nec egestas sem. Donec fringilla.
+        The Sangamon Valley Trail is a 5.5-mile (8.9 km) rail trail on the west side of Sangamon County in the U.S. state of Illinois. Skirting Springfield, Illinois, it extends from Centennial Park, on Springfield's southwest side, to Stuart Park on the same city's northwest side. It was constructed by a Sangamon County team in 2010-2011 at a cost of $3.8 million, and opened to the public on July 26, 2011. As of 2013, population in the trail's service area in western Sangamon County is growing rapidly.
       </p>
     </div>
   </div>
@@ -215,21 +206,12 @@
   <div class="row-fluid section2">
     <div class="span5 offset1 copy copy-right">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-        porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-        mollis justo velit at nunc. Fusce nec egestas sem. Donec
-        fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-        volutpat lorem ut congue malesuada. In facilisis scelerisque
-        turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-        quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-        risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-        rutrum, nunc leo tempus nisl, eu mollis justo velit at
-        nunc. Fusce nec egestas sem. Donec fringilla.
+        Our goal is to raise the necessary amount of funds to initiate expansion of the trail.  Funds will be directed towards planning, lobbying local officials in charge of the project, as well as materials and labor for its construction.  Join us in making this expansion an expedited reality for the enjoyment of all!
       </p>
     </div>
     <div class="span5 asset">
-      <img class="img-polaroid" src="http://placehold.it/480x300">
+      <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+      <img class="img-polaroid" style="width: 480px; height: 300px;" src="https://www.google.com/maps/vt/data=VLHX1wd2Cgu8wR6jwyh-km8JBWAkEzU4,ZOpHO4KlsX-51wnfVPosf16SDzkJ28_wLIXJBOG0UnflCFDYDslXJ7N-ThTENSF3cMmbDaYQFO5JP6Qr17_3wRq5zQuVJ1nzotLt96h05owad96gcndtelaOxpgSSJnn6VqTyOmu1OxFakVpBfbqAYhb2nox095ZDHNPwgDIf7XUhhP1Vqu5NJ1Nz8MmHHpc2X7fMneoCaCaojxoy7uBbS53">
     </div>
   </div>
 
@@ -239,21 +221,36 @@
       <div class="accordion" id="accordion2">
         <div class="accordion-group">
           <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What does FAQ stand for?</a>
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What will the money be used for?</a>
           </div>
           <div id="collapseOne" class="accordion-body collapse">
             <div class="accordion-inner">
-              Frequently Asked Question.
+              The money will go towards planning, materials, and labor.
             </div>
           </div>
         </div>
         <div class="accordion-group">
           <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">What's a Frequently Asked Question?</a>
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">How soon will the project be initiated if the required funding is met?</a>
           </div>
           <div id="collapseTwo" class="accordion-body collapse">
             <div class="accordion-inner">
-              A question which is commonly asked by users.
+              Project initiation depends mostly on the level of interest of the public.  In addition to the necessary funds, it woudl also be prudent to create awareness with local government officials in order to move the issue up the priority list.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-group">
+          <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion3" href="#collapseThree">How does the bike trail benefit the community?</a>
+          </div>
+          <div id="collapseThree" class="accordion-body collapse">
+            <div class="accordion-inner">
+              The bike trails provides for the following benefits:<br />
+              <ul>
+                <li>Less bikers on the roads = less accidents and fewer frustrated drivers trying to get to work! </li>
+                <li>Escape into nature with the additional benefit of alternate mode of transportation</li>
+                <li>Great way to stay healthy and in shape!</li>
+              </ul>
             </div>
           </div>
         </div>
