Added photos, captions, and display fixes

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
   </div>
   <div class="row-fluid pitch">
     <div class="span5 offset1 video">
-      <img class="img-polaroid" src="http://placehold.it/480x300">
+      <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+      <img class="img-polaroid" style="width: 480px; height: 300px;" alt="Washington Bridge on Sangamon Valley Trail" src="bridge.jpeg">
     </div>
 
     <div class="span5 actions">
@@ -194,7 +195,7 @@
   <div class="row-fluid section1">
     <div class="span5 offset1 asset">
       <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-      <img class="img-polaroid" style="width: 480px; height: 300px;" src="https://www.dropbox.com/s/bsnkngxjqy6qqo1/bridge.jpeg">
+      <img class="img-polaroid" style="width: 480px; height: 300px;" alt="map of Sangamon Valley Bike Trails" src="https://www.google.com/maps/vt/data=VLHX1wd2Cgu8wR6jwyh-km8JBWAkEzU4,ZOpHO4KlsX-51wnfVPosf16SDzkJ28_wLIXJBOG0UnflCFDYDslXJ7N-ThTENSF3cMmbDaYQFO5JP6Qr17_3wRq5zQuVJ1nzotLt96h05owad96gcndtelaOxpgSSJnn6VqTyOmu1OxFakVpBfbqAYhb2nox095ZDHNPwgDIf7XUhhP1Vqu5NJ1Nz8MmHHpc2X7fMneoCaCaojxoy7uBbS53">
     </div>
     <div class="span5 copy">
       <p>
@@ -211,7 +212,12 @@
     </div>
     <div class="span5 asset">
       <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-      <img class="img-polaroid" style="width: 480px; height: 300px;" src="https://www.google.com/maps/vt/data=VLHX1wd2Cgu8wR6jwyh-km8JBWAkEzU4,ZOpHO4KlsX-51wnfVPosf16SDzkJ28_wLIXJBOG0UnflCFDYDslXJ7N-ThTENSF3cMmbDaYQFO5JP6Qr17_3wRq5zQuVJ1nzotLt96h05owad96gcndtelaOxpgSSJnn6VqTyOmu1OxFakVpBfbqAYhb2nox095ZDHNPwgDIf7XUhhP1Vqu5NJ1Nz8MmHHpc2X7fMneoCaCaojxoy7uBbS53">
+      <figure>
+        <img src="Bike_Goal_Family.jpg" alt="Family enjoying the bike trail">
+        <figcaption>
+          By arztsamui
+        </figcaption>
+      </figure>
     </div>
   </div>
 
@@ -235,7 +241,7 @@
           </div>
           <div id="collapseTwo" class="accordion-body collapse">
             <div class="accordion-inner">
-              Project initiation depends mostly on the level of interest of the public.  In addition to the necessary funds, it woudl also be prudent to create awareness with local government officials in order to move the issue up the priority list.
+              Project initiation depends mostly on the level of public interest.  In addition to the necessary funds, it would also be important to create as much awareness with local government officials as possible in order to move the issue up the priority list.
             </div>
           </div>
         </div>
