further content changes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Extend Sangamon Valley Trail</a>
+                    <a class="brand" href="#">Sangamon Valley Trail Extension</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -139,7 +139,7 @@
 		<div class="container">
   <div class="row-fluid heading">
     <div class="span12">
-      <h1>Product</h1>
+      <h1>Help Extend Our Trail</h1>
     </div>
   </div> 
   <div class="row-fluid subheading">
