Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <div class="row-fluid pitch">
     <div class="span5 offset1 video">
       <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-      <img class="img-polaroid" style="width: 480px; height: 300px;" alt="Washington Bridge on Sangamon Valley Trail" src="bridge.jpeg">
+      <img class="img-polaroid" style="width: 480px; height: 300px;" alt="Washington Bridge on Sangamon Valley Trail" src="img/bridge.jpeg">
     </div>
 
     <div class="span5 actions">
@@ -213,7 +213,7 @@
     <div class="span5 asset">
       <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
       <figure>
-        <img src="Bike_Goal_Family.jpg" alt="Family enjoying the bike trail">
+        <img src="img/Bike_Goal_Family.jpg" alt="Family enjoying the bike trail">
         <figcaption>
           By arztsamui
         </figcaption>
