--- a/index.html
+++ b/index.html
@@ -1,232 +1,248 @@
+
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8"/>
-		<title>My First Bitstarter</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-    	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-    	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-    	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
-    	<style type="text/css">
-    	 /* Large desktop */
-        @media (min-width: 980px) {
+  <head>
+    <meta charset="utf-8">
+    <title>My First Bitstarter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+          rel="stylesheet" type="text/css">
+    <style type="text/css">
 
-            body {
-                padding-top: 60px !important;
-            }
-            .linediv-l {
-                border-right: 1px white solid;
-            }
-            .linediv-r {
-                border-left: 1px white solid;
-            }
-        }
-
-            /* Landscape phones and down */
-        @media(max-width: 480px) {
-            .copy {
-                padding: 2.5% 10%;
-            }
-            .linediv-l {
-                border-right: 1px white solid;
-            }
-            .linediv-r {
-                border-left: 1px white solid;
-            }
-        }
-
-            /* All form factors */
-
-            /* Main body and headings */
+      /* Large desktop */
+      @media (min-width: 980px) { 
         body {
-            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+         padding-top: 60px;
         }
-
-        .heading, .subheading {
-            font-family:'Ubuntu', Helvetica, Arial, sans-serif;
-            text-align: center;
+       .linediv-l {
+         border-right: 1px white solid;
         }
+       .linediv-r {
+         border-left: 1px white solid;
+       }
+      }
 
-        p.lead {
-            padding-top: 1.5%;
-            font-size: 24px;
-            line-height: 30px;
-        }
+      /* Landscape phones and down */
+      @media (max-width: 480px) { 
+       .copy {
+         padding: 2.5% 10%;
+       }
+       .linediv-l {
+         border-bottom: 1px white solid;
+       }
+       .linediv-r {
+         border-top: 1px white solid;
+       }
+      }
 
-        p {
-            font-size: 18px;
-            line-height: 24px;
-        }
+      /* All form factors */
 
-            /* Video pitch and Action */
-        .pitch {
-            padding: 2.5% 0%;
-        }
+      /* Main body and headings */
+      body{
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      }
+      .heading, .subheading {
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+        text-align: center;
+      }
+      p.lead {
+        padding-top: 1.5%;
+        font-size: 24px;
+        line-height: 30px;
+      }
+      p {
+        font-size: 18px;
+        line-height: 24px;
+      }
 
-        .order {
-            padding: 2% 0%;
-        }
+      /* Video pitch and Action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
+        text-align: center;
+      }
+      .statistics h3, .statistics p {
+        color: white;
+      }
 
-        .actions {
-            background-color: #343434;
-            padding: 3% 0%;
-        }
-
-        .video, .thermometer, .order, .social, .statistics {
-            text-align: center;
-        }
-
-        .statistics h3, .statistics p {
-            color: white;
-        }
-
-            /* Marketing Copy and Footer */
-        .copy {
-            padding-top: 2.5%;
-            padding-bottom: 2.5%;
-            text-align: justify;
-        }
-
-        .asset {
-            padding: 2.5% 0%;
-        }
-
-        .footer {
-            color: #cccccc;
-            text-align: center;
-        }
-
-        .footer p {
-            font-size: 11px;
-        }
-
-        .footer a {
-            color: #ccccff;
-        }
-
+      /* Marketing Copy and Footer */
+      .copy {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        text-align: justify;
+      }
+      .asset {
+        padding: 2.5% 0%;
+      }
+      .footer {
+        color: #cccccc;
+        text-align: center;
+      }
+      .footer p {
+        font-size: 11px;
+      }
+      .footer a {
+        color: #ccccff;
+      }
     </style>
-	</head>
-	<body>
-        <!-- Mobile friendly nav bar-->
-        <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="brand" href="#">Sangamon Valley Trail Extension</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
+  </head>
+  <body>
+
+    <!-- Mobile-friendly navbar adapted from example. -->
+    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+    <!-- http://stackoverflow.com/a/12270322 -->
+    <div class="container">
+      <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
+      <!-- www.google.com/fonts/specimen/Ubuntu -->
+      <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+      <div class="row-fluid heading">
+        <div class="span12">
+          <h1>Help Extend Our Trail</h1>
+        </div>
+      </div> 
+      <div class="row-fluid subheading">
+        <div class="span12">
+          <!-- Special typography from Bootstrap for lead paragraph. -->
+          <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+          <p class="lead">The goal is to extend the great Sangamon Valley Trail to allow for further exploration and enjoyment.</p>
+        </div>
+      </div>
+      <div class="row-fluid pitch">
+        <div class="span5 offset1 video">
+          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
+        </div>
+
+        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+        <div class="span5 actions">
+          <div class="row-fluid">
+          <div class="span8 offset2">
+            <div class="row-fluid statistics">
+              <div class="span4">
+                <!-- linediv-l and linediv-r give dividing lines that look
+                different in horizontal and vertical layouts, illustrating
+                media queries. -->
+                <div class="linediv-l">
+                <h3>1000</h3> <p>backers</p>
                 </div>
-            </div>
-        </div>
-
-        <!-- We use row-fluid inside containers to achieve a reliable layout -->
-        <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
-        <!-- http://stackoverflow.com/a/12270322 -->
-		<div class="container">
-  <div class="row-fluid heading">
-    <div class="span12">
-      <h1>Help Extend Our Trail</h1>
-    </div>
-  </div> 
-  <div class="row-fluid subheading">
-    <div class="span12">
-      <p class="lead">The goal is to extend the great Sangamon Valley Trail to allow for further exploration and enjoyment.</p>
-    </div>
-  </div>
-  <div class="row-fluid pitch">
-    <div class="span5 offset1 video">
-      <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-      <img class="img-polaroid" style="width: 480px; height: 300px;" alt="Washington Bridge on Sangamon Valley Trail" src="img/bridge.jpeg">
-    </div>
-
-    <div class="span5 actions">
-      <div class="span8 offset2">
-        <div class="statistics">
-          <div class="span4">
-            <div class="linediv-l">
-              <h3>1000</h3>
-              <p>backers</p>
+              </div>
+              <div class="span4">
+                <div class="linediv-c">
+                  <h3>$6000</h3> <p>of $10,000</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-r">
+                <h3>10</h3> <p>days left</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="span4">
-            <div class="linediv-c">
-              <h3>$6000</h3>
-              <p>of $10,000</p>
+          <div class="row-fluid">
+          <div class="span10 offset1">
+            <!-- Bootstrap progress bar -->
+            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+            <div class="thermometer progress active">
+              <div class="bar bar-success" style="width: 60%;"></div>
+              <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
-          <div class="span4">
-            <div class="linediv-r">
-              <h3>10</h3>
-              <p>days left</p>
-            </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span6 offset3 order">
+            <!-- Standard Bootstrap button. -->
+            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+            <button class="btn btn-success btn-large">Preorder</button>
+          </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span8 offset2 social">
+            <!-- Social buttons are not included in default Bootstrap. -->
+            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+          </div>
           </div>
         </div>
-      </div>
-      <div class="span10 offset1">
-        <div class="thermometer progress active">
-          <div class="bar bar-success" style="width: 60%;"></div>
-          <div class="bar bar-warning" style="width: 40%;"></div>
         </div>
       </div>
-      <div class="span6 offset3 order">
-        <button class="btn btn-success btn-large">Preorder</button>
-      </div>
-      <div class="span8 offset2 social">
-        <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-        <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-      </div>
-    </div>
-  </div>
 
-  <div class="row-fluid section1">
-    <div class="span5 offset1 asset">
-      <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-      <img class="img-polaroid" style="width: 480px; height: 300px;" alt="map of Sangamon Valley Bike Trails" src="https://www.google.com/maps/vt/data=VLHX1wd2Cgu8wR6jwyh-km8JBWAkEzU4,ZOpHO4KlsX-51wnfVPosf16SDzkJ28_wLIXJBOG0UnflCFDYDslXJ7N-ThTENSF3cMmbDaYQFO5JP6Qr17_3wRq5zQuVJ1nzotLt96h05owad96gcndtelaOxpgSSJnn6VqTyOmu1OxFakVpBfbqAYhb2nox095ZDHNPwgDIf7XUhhP1Vqu5NJ1Nz8MmHHpc2X7fMneoCaCaojxoy7uBbS53">
-    </div>
-    <div class="span5 copy">
-      <p>
+      <!-- Beyond this part the marketing copy begins. -->
+      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+      <!-- http://placehold.it -->
+      <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid" style="width: 480px; height: 300px;" alt="map of Sangamon Valley Bike Trails" src="https://www.google.com/maps/vt/data=VLHX1wd2Cgu8wR6jwyh-km8JBWAkEzU4,ZOpHO4KlsX-51wnfVPosf16SDzkJ28_wLIXJBOG0UnflCFDYDslXJ7N-ThTENSF3cMmbDaYQFO5JP6Qr17_3wRq5zQuVJ1nzotLt96h05owad96gcndtelaOxpgSSJnn6VqTyOmu1OxFakVpBfbqAYhb2nox095ZDHNPwgDIf7XUhhP1Vqu5NJ1Nz8MmHHpc2X7fMneoCaCaojxoy7uBbS53">
+        </div>
+        <div class="span5 copy">
+          <p>
         The Sangamon Valley Trail is a 5.5-mile (8.9 km) rail trail on the west side of Sangamon County in the U.S. state of Illinois. Skirting Springfield, Illinois, it extends from Centennial Park, on Springfield's southwest side, to Stuart Park on the same city's northwest side. It was constructed by a Sangamon County team in 2010-2011 at a cost of $3.8 million, and opened to the public on July 26, 2011. As of 2013, population in the trail's service area in western Sangamon County is growing rapidly.
       </p>
-    </div>
-  </div>
+        </div>
+      </div>
 
-  <div class="row-fluid section2">
-    <div class="span5 offset1 copy copy-right">
-      <p>
+      <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+          <p>
         Our goal is to raise the necessary amount of funds to initiate expansion of the trail.  Funds will be directed towards planning, lobbying local officials in charge of the project, as well as materials and labor for its construction.  Join us in making this expansion an expedited reality for the enjoyment of all!
       </p>
-    </div>
-    <div class="span5 asset">
-      <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-      <figure>
+        </div>
+        <div class="span5 asset">
+          <figure>
         <img src="img/Bike_Goal_Family.jpg" alt="Family enjoying the bike trail">
         <figcaption>
           By arztsamui
         </figcaption>
       </figure>
-    </div>
-  </div>
+        </div>
+      </div>
 
-  <div class="row-fluid faq">
-    <div class="span10 offset1">
-      <h3>FAQ</h3>
-      <div class="accordion" id="accordion2">
-        <div class="accordion-group">
-          <div class="accordion-heading">
+      <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+      <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
+      <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
+      <div class="row-fluid faq">
+          <div class="span10 offset1">
+            <h3>FAQ</h3>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What will the money be used for?</a>
           </div>
           <div id="collapseOne" class="accordion-body collapse">
@@ -234,9 +250,9 @@
               The money will go towards planning, materials, and labor.
             </div>
           </div>
-        </div>
-        <div class="accordion-group">
-          <div class="accordion-heading">
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">How soon will the project be initiated if the required funding is met?</a>
           </div>
           <div id="collapseTwo" class="accordion-body collapse">
@@ -244,9 +260,8 @@
               Project initiation depends mostly on the level of public interest.  In addition to the necessary funds, it would also be important to create as much awareness with local government officials as possible in order to move the issue up the priority list.
             </div>
           </div>
-        </div>
-        <div class="accordion-group">
-          <div class="accordion-heading">
+              </div>
+              <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion3" href="#collapseThree">How does the bike trail benefit the community?</a>
           </div>
           <div id="collapseThree" class="accordion-body collapse">
@@ -259,10 +274,22 @@
               </ul>
             </div>
           </div>
+            </div>
+          </div>
+
+      </div>
+
+      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+        <div class="span12">
+          <p>This work is licensed under
+            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+              By-SA 3.0
+            </a>, without all the cruft that would otherwise be
+            put at the bottom of the page.</p>
         </div>
       </div>
     </div>
-  </div>
-</div>
-</body>
+  </body>
 </html>
