--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My First Bitstarter</title>
+  <title>Trailstarter | Growing Nature's Footprint in Urban Society</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -101,7 +101,7 @@ p {
 
 /* addthis fix */
 div.addthis_toolbox {
-  width: 180px;
+  width: 250px;
   margin: 0 auto;
 }
 </style>
@@ -305,5 +305,16 @@ div.addthis_toolbox {
       </div>
     </div>
   </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42981529-1', 'trailstarter.co');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
