GA Bug fix - code added

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ div.addthis_toolbox {
 
   // Legacy GA code needed to indicate tracking is indeed installed
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-XXXXX-Y']);
+  _gaq.push(['_setAccount', 'UA-42981529-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
