--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@ div.addthis_toolbox {
             <div class="span6 offset3 order">
               <!-- Standard Bootstrap button. -->
               <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-              <button class="btn btn-success btn-large">Preorder</button>
+              <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+              <a class="coinbase-button" data-code="c3a1d8f33dc5bb91180f1b8362528151" href="https://coinbase.com/checkouts/c3a1d8f33dc5bb91180f1b8362528151">Pay With Bitcoin</a>
             </div>
           </div>
           <div class="row-fluid">
@@ -328,5 +329,6 @@ div.addthis_toolbox {
   ga('send', 'pageview');
 
 </script>
+<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 </body>
 </html>
