--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ div.addthis_toolbox {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="brand" href="#">Bitstarter</a>
+	<a class="brand" href="#">Trailstarter</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="active"><a href="#">Home</a></li>
